--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ag",
+  "name": "nuxt-app",
   "type": "module",
   "private": true,
   "scripts": {
@@ -10,6 +10,9 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxt/content": "^3.9.0",
+    "@nuxt/image": "^2.0.0",
+    "better-sqlite3": "^12.5.0",
     "nuxt": "^4.2.2",
     "vue": "^3.5.25",
     "vue-router": "^4.6.3"
